# advent_of_code

./: .gitignore  CMakeLists.txt  justfile
2023/: CMakeLists.txt
2023/01/: main.cpp  part_1.cpp  part_2.cpp  part_2.hpp
2023/01/tests/: test_day.cpp
2023/02/: README.md  main.cpp  part_1.cpp  part_1.hpp  part_2.cpp  part_2.hpp
2023/02/tests/: test_day.cpp
2023/03/: part_1.cpp  part_1.hpp  part_2.cpp  part_2.hpp
2023/03/tests/: test_day.cpp
2023/04/: part_1.cpp  part_1.hpp  part_2.cpp  part_2.hpp
2023/04/tests/: test_day.cpp
2023/05/: part_1.cpp  part_1.hpp  part_2.cpp  part_2.hpp
2023/05/tests/: test_day.cpp
2023/06/: main.cpp  part_1.cpp  part_1.hpp  part_2.cpp  part_2.hpp
2023/06/tests/: test_day.cpp
2023/07/: part_1.cpp  part_1.hpp  part_2.cpp  part_2.hpp
2023/07/tests/: test_day.cpp
2023/08/: main.cpp  part_1.cpp
2023/10/: main.cpp
2023/12/: main.cpp
2023/14/: main.cpp
2023/15/: main.cpp
2023/17/: main.cpp
2023/18/: main.cpp  part_2.cpp
2023/21/: main.cpp
2023/22/: main.cpp
2024/03/src/: lib.rs
2024/04/src/: lib.rs  main.rs
2024/06/src/: main.rs
2024/07/tests/: tests.rs
2024/08/tests/: tests.rs
2024/10/: Cargo.toml
2024/10/src/: lib.rs  main.rs
2024/10/tests/: tests.rs
2024/11/src/: main.rs
2024/12/src/: lib.rs  main.rs
2024/13/: Cargo.toml
2024/14/src/: main.rs
2024/15/src/: lib.rs  part2.rs
2024/16/src/: main.rs
2024/17/: test_input2.txt
2024/17/src/: main.rs  (+1 more)
2024/19/: Cargo.toml  scratch.txt
2024/24/: Cargo.toml
cmake/: AocDay.cmake
libs/cpp/: CMakeLists.txt
tests/: CMakeLists.txt  graph_tests.cpp  parsing_tests.cpp
y2023/01/: CMakeLists.txt  main.cpp  part_1.cpp  part_1.hpp  part_2.cpp
y2023/01/tests/: test_day01.cpp
y2023/02/: CMakeLists.txt  main.cpp  part_1.cpp  part_2.cpp
y2023/02/tests/: test_day02.cpp
y2023/03/: main.cpp
y2023/04/: main.cpp
y2023/05/: main.cpp
y2023/06/: main.cpp
y2023/07/: main.cpp
y2023/09/: main.cpp
y2023/11/: main.cpp
y2023/12/: CMakeLists.txt
y2023/13/: CMakeLists.txt  main.cpp
y2023/14/: CMakeLists.txt
y2023/16/: CMakeLists.txt  main.cpp
y2023/17/: CMakeLists.txt
y2023/18/: CMakeLists.txt
y2023/19/: CMakeLists.txt  main.cpp
y2023/20/: CMakeLists.txt  main.cpp
y2023/21/: CMakeLists.txt
y2023/22/: CMakeLists.txt
y2023/23/: CMakeLists.txt  main.cpp
y2023/24/: CMakeLists.txt  main.cpp
y2024/06/: Cargo.toml
y2024/11/: Cargo.toml
y2024/14/: Cargo.toml
y2024/15/: deleteme
(+88 files in other folders)
